<resources>
    <string name="app_name">NYTimes Most Populars</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_loading">Loading</string>
    <string name="error_no_internet">Please check your internet connection</string>
    <string name="empty_search_result">Nothing was found. Please change your search query and/or settings.</string>
    <string name="share_link">Share Link</string>
    <string name="begin_date">Begin Date</string>
    <string name="sort_order">Sort Order</string>
    <string name="search_order_prompt">Select a search order for articles</string>
    <string name="news_desk_values">News Desk Values</string>
    <string name="news_desk_arts">Arts</string>
    <string name="news_desk_fashion">Fashion &amp; Style</string>
    <string name="news_desk_sports">Sports</string>
    <string name="button_save">Save</string>
    <string name="button_clear">Clear</string>
    <string name="not_selected">Not selected</string>

    <string-array name="search_order_array">
        <item>Newest</item>
        <item>Oldest</item>
    </string-array>

</resources>